--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+1.3
+
+o added function for computing generalized eigenvalues from a generalized Schur decomposition
+o introduced S3 classes and methods for calculating generalized
+  eigenvalues from the generalized Schur decomposition
+o documentation tweaks and clarifications
+o added Copyright field in DESCRIPTION
+
 1.2
 
 o added Lapack Licence
